Feature/3 add users and basic authorization fix day aggregate (#15)
* Added abstract aggregate

* Fixes

* Fixes

* Added response

* Refactpred e2e

* Added login but not finished

* FIX

* Some fixes